Update README file
Added instructions on how to submit contributions to this project.

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 This repository is completely free to use and download, and is currently available for everyone to modify, audit, and share the code.
 It is completely licensed under the GNU GPLv3 license.
+If you contribute to this project for the first time, don't hesitate to fork this repository, modify your own branch, and create a pull request.
